...
          location: weathers.location,
          selectedWeather: selectedWeather,
          forecast: forecast,
        ),
      );
    } on LocationNotFoundException {
      _emitErrorState('City not found');
    } on WeatherNotFoundException {
      _emitErrorState('Weather not found');
    } on WeatherRequestFailureException {
      _emitErrorState('Failed to fetch weather');
    }
  }
...
